# game-of-life-wgpu

./: Cargo.toml  README.md
src/: compute.wgsl  main.rs  shader.wgsl  vertex.rs
