[package]
name = "game-of-wgpu-life"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.3"
image = { version = "0.25.1", features = ["jpeg"] }
pollster = "0.3.0"
rand = "0.8.5"
thiserror = "1.0.61"
wgpu = "0.20.0"
winit = "0.30.0"
